Fixed icon alignment for icons that sit within buttons.

--- a/src/assets/styles/scss/elements.scss
+++ b/src/assets/styles/scss/elements.scss
@@ -45,3 +45,7 @@ iframe {
 #pause:hover {
     cursor: pointer;
 }
+
+button i {
+    width: 100%;
+}
